Added support for configured ReferenceFinder